fix date format, kafka group id, string formatting and modern stream api